--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="src\dynsec\init\init.hpp" />
     <ClInclude Include="src\dynsec\types\init_types.hpp" />
     <ClInclude Include="src\stdafx.hpp" />
+    <ClInclude Include="src\utils\caller.hpp" />
     <ClInclude Include="src\utils\va.hpp" />
   </ItemGroup>
   <ItemGroup>
