--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="src\dynsec\init\init.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils\caller.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
