--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -167,6 +167,8 @@
     <ClInclude Include="src\dynsec\types\init_types.hpp" />
     <ClInclude Include="src\stdafx.hpp" />
     <ClInclude Include="src\utils\caller.hpp" />
+    <ClInclude Include="src\utils\module.hpp" />
+    <ClInclude Include="src\utils\structs.hpp" />
     <ClInclude Include="src\utils\va.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +180,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\utils\module.cpp" />
     <ClCompile Include="src\utils\va.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
