syscall cleanup, rc4 :eggplant:

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -165,6 +165,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\dynsec\crypto\rc4.hpp" />
     <ClInclude Include="src\dynsec\init\init.hpp" />
     <ClInclude Include="src\dynsec\types\init_types.hpp" />
     <ClInclude Include="src\stdafx.hpp" />
@@ -177,6 +178,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\dllmain.cpp" />
+    <ClCompile Include="src\dynsec\crypto\rc4.cpp" />
     <ClCompile Include="src\dynsec\init\init.cpp" />
     <ClCompile Include="src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
