--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\utils\secure\virtual.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\dynsec\crypto\rc4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.hpp">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\utils\secure\virtual.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\dynsec\crypto\rc4.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
