--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="src\dynsec\crypto\rc4.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\dynsec\types\packet_types.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
