--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -58,6 +58,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -192,7 +193,11 @@
     <ClCompile Include="src\utils\secure\virtual.cpp" />
     <ClCompile Include="src\utils\va.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="src\syscall_callback.asm" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
   </ImportGroup>
 </Project>
