simple encryption for the packets being sent to the server

--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -168,6 +168,7 @@
   <ItemGroup>
     <ClInclude Include="src\dynsec\crypto\rc4.hpp" />
     <ClInclude Include="src\dynsec\init\init.hpp" />
+    <ClInclude Include="src\dynsec\network\encryption.hpp" />
     <ClInclude Include="src\dynsec\network\network_socket.hpp" />
     <ClInclude Include="src\dynsec\types\init_types.hpp" />
     <ClInclude Include="src\dynsec\types\packet_types.hpp" />
@@ -183,6 +184,7 @@
     <ClCompile Include="src\dllmain.cpp" />
     <ClCompile Include="src\dynsec\crypto\rc4.cpp" />
     <ClCompile Include="src\dynsec\init\init.cpp" />
+    <ClCompile Include="src\dynsec\network\encryption.cpp" />
     <ClCompile Include="src\dynsec\network\network_socket.cpp" />
     <ClCompile Include="src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
