--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\dynsec\network\network_socket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\dynsec\network\encryption.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.hpp">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\dynsec\network\network_socket.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\dynsec\network\encryption.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
