--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\dynsec\network\encryption.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\utils\secure\pointers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.hpp">
@@ -84,6 +87,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\dynsec\network\encryption.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\secure\pointers.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\math.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
