--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -174,6 +174,8 @@
     <ClInclude Include="src\dynsec\types\packet_types.hpp" />
     <ClInclude Include="src\stdafx.hpp" />
     <ClInclude Include="src\utils\caller.hpp" />
+    <ClInclude Include="src\utils\math.hpp" />
+    <ClInclude Include="src\utils\secure\pointers.hpp" />
     <ClInclude Include="src\utils\secure\virtual.hpp" />
     <ClInclude Include="src\utils\secure\module.hpp" />
     <ClInclude Include="src\utils\structs.hpp" />
@@ -193,6 +195,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\utils\secure\module.cpp" />
+    <ClCompile Include="src\utils\secure\pointers.cpp" />
     <ClCompile Include="src\utils\secure\syscall.cpp" />
     <ClCompile Include="src\utils\secure\virtual.cpp" />
     <ClCompile Include="src\utils\va.cpp" />
