--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -170,9 +170,11 @@
     <ClInclude Include="src\dynsec\init\init.hpp" />
     <ClInclude Include="src\dynsec\network\encryption.hpp" />
     <ClInclude Include="src\dynsec\network\network_socket.hpp" />
+    <ClInclude Include="src\dynsec\shellcode\shellcode.hpp" />
     <ClInclude Include="src\dynsec\types\init_types.hpp" />
     <ClInclude Include="src\dynsec\types\packet_types.hpp" />
     <ClInclude Include="src\stdafx.hpp" />
+    <ClInclude Include="src\utils\async.hpp" />
     <ClInclude Include="src\utils\caller.hpp" />
     <ClInclude Include="src\utils\math.hpp" />
     <ClInclude Include="src\utils\secure\pointers.hpp" />
@@ -188,12 +190,14 @@
     <ClCompile Include="src\dynsec\init\init.cpp" />
     <ClCompile Include="src\dynsec\network\encryption.cpp" />
     <ClCompile Include="src\dynsec\network\network_socket.cpp" />
+    <ClCompile Include="src\dynsec\shellcode\shellcode.cpp" />
     <ClCompile Include="src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\utils\async.cpp" />
     <ClCompile Include="src\utils\secure\module.cpp" />
     <ClCompile Include="src\utils\secure\pointers.cpp" />
     <ClCompile Include="src\utils\secure\syscall.cpp" />
