--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\global\variables.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TLSManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.hpp">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\global\variables.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TLSManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
