--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -60,7 +60,7 @@
     <ClCompile Include="src\global\variables.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TLSManager.cpp">
+    <ClCompile Include="src\dynsec\init\TLSManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -122,7 +122,7 @@
     <ClInclude Include="src\global\variables.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TLSManager.h">
+    <ClInclude Include="src\dynsec\init\TLSManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
