--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -60,7 +60,10 @@
     <ClCompile Include="src\global\variables.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\dynsec\init\TLSManager.cpp">
+    <ClCompile Include="src\dynsec\init\tls_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\dynsec\init\routines\routines.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -122,7 +125,10 @@
     <ClInclude Include="src\global\variables.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\dynsec\init\TLSManager.hpp">
+    <ClInclude Include="src\dynsec\init\tls_manager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\dynsec\init\routines\routines.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
