--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -51,7 +51,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
     <SpectreMitigation>false</SpectreMitigation>
@@ -115,7 +115,6 @@
       <PrecompiledHeaderFile>stdafx.hpp</PrecompiledHeaderFile>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <AdditionalIncludeDirectories>$(ProjectDir)src\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -177,7 +176,7 @@
     <ClInclude Include="src\dynsec\types\packet_types.hpp" />
     <ClInclude Include="src\global\variables.hpp" />
     <ClInclude Include="src\stdafx.hpp" />
-    <ClInclude Include="src\utils\async.hpp" />
+    <ClInclude Include="src\utils\threads\async.hpp" />
     <ClInclude Include="src\utils\caller.hpp" />
     <ClInclude Include="src\utils\math.hpp" />
     <ClInclude Include="src\utils\scans\signature_scan.hpp" />
@@ -186,6 +185,7 @@
     <ClInclude Include="src\utils\secure\module.hpp" />
     <ClInclude Include="src\utils\structs.hpp" />
     <ClInclude Include="src\utils\secure\syscall.hpp" />
+    <ClInclude Include="src\utils\threads\thread_pool.hpp" />
     <ClInclude Include="src\utils\utils.hpp" />
     <ClInclude Include="src\utils\va.hpp" />
   </ItemGroup>
@@ -205,12 +205,13 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="src\utils\async.cpp" />
+    <ClCompile Include="src\utils\threads\async.cpp" />
     <ClCompile Include="src\utils\scans\signature_scan.cpp" />
     <ClCompile Include="src\utils\secure\module.cpp" />
     <ClCompile Include="src\utils\secure\pointers.cpp" />
     <ClCompile Include="src\utils\secure\syscall.cpp" />
     <ClCompile Include="src\utils\secure\virtual.cpp" />
+    <ClCompile Include="src\utils\threads\thread_pool.cpp" />
     <ClCompile Include="src\utils\utils.cpp" />
     <ClCompile Include="src\utils\va.cpp" />
   </ItemGroup>
