--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="src\dynsec\shellcode\shellcode.hpp" />
     <ClInclude Include="src\dynsec\types\init_types.hpp" />
     <ClInclude Include="src\dynsec\types\packet_types.hpp" />
+    <ClInclude Include="src\dynsec\types\routine_types.hpp" />
     <ClInclude Include="src\global\variables.hpp" />
     <ClInclude Include="src\stdafx.hpp" />
     <ClInclude Include="src\utils\threads\async.hpp" />
