--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\utils\threads\thread_pool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\utils\memory\memory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.hpp">
@@ -144,6 +147,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\dynsec\types\routine_types.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\memory\memory.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
