--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="src\utils\memory\memory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\utils\secure\resolved.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stdafx.hpp">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\utils\memory\memory.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utils\secure\resolved.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
