--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="src\global\variables.hpp" />
     <ClInclude Include="src\stdafx.hpp" />
     <ClInclude Include="src\utils\memory\memory.hpp" />
+    <ClInclude Include="src\utils\secure\resolved.hpp" />
     <ClInclude Include="src\utils\threads\async.hpp" />
     <ClInclude Include="src\utils\caller.hpp" />
     <ClInclude Include="src\utils\math.hpp" />
@@ -208,6 +209,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\utils\memory\memory.cpp" />
+    <ClCompile Include="src\utils\secure\resolved.cpp" />
     <ClCompile Include="src\utils\threads\async.cpp" />
     <ClCompile Include="src\utils\scans\signature_scan.cpp" />
     <ClCompile Include="src\utils\secure\module.cpp" />
